WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121175
Vector::append doesn't work if element type has overloaded operator&
https://bugs.webkit.org/show_bug.cgi?id=121175
Summary
Vector::append doesn't work if element type has overloaded operator&
Anders Carlsson
Reported
2013-09-11 12:02:03 PDT
Vector::append doesn't work if element type has overloaded operator&
Attachments
Patch
(2.92 KB, patch)
2013-09-11 12:03 PDT
,
Anders Carlsson
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-09-11 12:03:24 PDT
Created
attachment 211339
[details]
Patch
Brent Fulgham
Comment 2
2013-09-11 12:05:59 PDT
Comment on
attachment 211339
[details]
Patch Wow! Nice fix. r=me.
Darin Adler
Comment 3
2013-09-11 15:16:41 PDT
Comment on
attachment 211339
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=211339&action=review
> Source/WTF/ChangeLog:12 > + (WTF::::appendSlowCase): > + (WTF::::uncheckedAppend):
Lame prepare-ChangeLog script left out Vector.
Anders Carlsson
Comment 4
2013-09-24 14:48:24 PDT
This was landed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug