Vector::append doesn't work if element type has overloaded operator& https://bugs.webkit.org/show_bug.cgi?id=121175

Reviewed by Brent Fulgham.

Source/WTF:

Use std::addressof to get the address of the given object.

* wtf/Vector.h:
(WTF::::appendSlowCase):
(WTF::::uncheckedAppend):

Tools:

Add a test case.

* TestWebKitAPI/Tests/WTF/Vector.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/139109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155551 268f45cc-cd09-0410-ab3c-d52691b4dbfc